fix shape z-index

--- a/src/assets/scss/components/_shapes.scss
+++ b/src/assets/scss/components/_shapes.scss
@@ -1,4 +1,4 @@
-body :first-of-type {
+body > * {
 	position: relative;
 	z-index: $zindex-content;
 }
